--- a/src/index.html
+++ b/src/index.html
@@ -17,17 +17,15 @@
 <body>
 <div class="container">
     <div class="card daniel-card">
+        <img src="assets/bg-pattern-quotation.svg" alt="quote">
         <section>
             <header>
                 <img src="assets/image-daniel.jpg" alt="alumni">
-                <span class="personData">
-          <span class="name">
-            Daniel Clifford
-          </span>
-          <span class="personTitle">
-            Verified Graduate
-          </span>
-        </span>
+                <span class="picture-background"></span>
+                <div class="personData">
+                    <div class="name">Daniel Clifford</div>
+                    <div class="personTitle">Verified Graduate</div>
+                </div>
             </header>
             <div class="content">
                 <h1>I received a job offer mid-course, and the subjects I learned were current, if not more so, in the
@@ -48,14 +46,11 @@
         <section>
             <header>
                 <img src="assets/image-jonathan.jpg" alt="alumni">
-                <span class="personData">
-          <span class="name">
-            Johnathan Walters
-          </span>
-          <span class="personTitle">
-            Verified Graduate
-          </span>
-        </span>
+                <span class="picture-background"></span>
+                <div class="personData">
+                    <div class="name">Johnathan Walters</div>
+                    <div class="personTitle">Verified Graduate</div>
+                </div>
             </header>
             <div class="content">
                 <h1>The team was very supportive and kept me motivated</h1>
@@ -72,14 +67,11 @@
         <section>
             <header>
                 <img src="assets/image-jeanette.jpg" alt="alumni">
-                <span class="personData">
-          <span class="name">
-            Janette Harmon
-          </span>
-          <span class="personTitle">
-            Verified Graduate
-          </span>
-        </span>
+                <span class="picture-background"></span>
+                <div class="personData">
+                    <div class="name">Janette Harmon</div>
+                    <div class="personTitle">Verified Graduate</div>
+                </div>
             </header>
             <div class="content">
                 <h1>An overall wonderful and rewarding experience</h1>
@@ -95,14 +87,11 @@
         <section>
             <header>
                 <img src="assets/image-patrick.jpg" alt="alumni">
-                <span class="personData">
-          <span class="name">
-            Patrick Abrams
-          </span>
-          <span class="personTitle">
-            Verified Graduate
-          </span>
-        </span>
+                <span class="picture-background"></span>
+                <div class="personData">
+                    <div class="name">Patrick Abrams</div>
+                    <div class="personTitle">Verified Graduate</div>
+                </div>
             </header>
             <div class="content">
                 <h1>Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and
@@ -121,20 +110,18 @@
         <section>
             <header>
                 <img src="assets/image-kira.jpg" alt="alumni">
-                <span class="personData">
-          <span class="name">
-            Kira Whittle
-          </span>
-          <span class="personTitle">
-            Verified Graduate
-          </span>
-        </span>
+                <span class="picture-background"></span>
+                <div class="personData">
+                    <div class="name">Kira Whittle</div>
+                    <div class="personTitle">Verified Graduate</div>
+                </div>
             </header>
             <div class="content">
                 <h1>Such a life-changing experience. Highly recommended!</h1>
 
-                <blockquote><p>Before joining the bootcamp, I've never written a line of code. I needed some structure
-                    from professionals who can help me learn programming step by step. I was encouraged to enroll by a former
+                <blockquote><p>"Before joining the bootcamp, I've never written a line of code. I needed some structure
+                    from professionals who can help me learn programming step by step. I was encouraged to enroll by a
+                    former
                     student od theirs who can only say wonderful things about the program. The entire curriculum and
                     staff did not disappoint. They were very hands-on and I never had to wait long for assistance. The
                     agile team project, in particular, was outstanding. It took my learning to the next level in a way
